# cmake-example

./: CMakeLists.txt  README.md  main.cxx
MyLibrary/: CMakeLists.txt  MyPrint.cxx  MyPrint.h
